# traducteur-intelligent

./: pyproject.toml
traducteur_intelligent/notebooks/: retrieve_rewrite_read.ipynb  translate_workspace.ipynb
