[tool.poetry]
name = "traducteur-intelligent"
version = "0.1.0"
description = ""
authors = ["Patrick <plombardo@opentable.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.5"
langchain-core = "^0.2.7"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.8"
jupyter = "^1.0.0"
load-dotenv = "^0.1.0"
duckduckgo-search = "^6.1.6"
langchainhub = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
